--- a/03-frontend/angular-ecommerce/package.json
+++ b/03-frontend/angular-ecommerce/package.json
@@ -21,8 +21,11 @@
     "@angular/router": "~11.2.11",
     "@fortawesome/fontawesome-free": "^5.15.3",
     "@ng-bootstrap/ng-bootstrap": "^9.1.0",
+    "@okta/okta-angular": "^3.1.0",
+    "@okta/okta-signin-widget": "^5.6.1",
     "bootstrap": "^4.6.0",
     "rxjs": "~6.6.0",
+    "rxjs-compat": "^6.6.7",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
   },
