--- a/02-backend/spring-boot-ecommerce/src/main/resources/application.properties
+++ b/02-backend/spring-boot-ecommerce/src/main/resources/application.properties
@@ -10,3 +10,8 @@ spring.data.rest.base-path=/api
 allowed.origins=http://localhost:4200
 
 spring.data.rest.detection-strategy=ANNOTATED
+
+okta.oauth2.client-id=0oaq2dzub87H5IkN45d6
+okta.oauth2.client-secret=-YWe95fiJ0gCfYAjz1AICToy1zU4jkMq4oD5XVkB
+okta.oauth2.issuer=https://dev-20060040.okta.com
+#okta.oauth2.issuer=https://dev-20060040.okta.com/oauth2/default
