securing the order history backend

--- a/02-backend/spring-boot-ecommerce/src/main/resources/application.properties
+++ b/02-backend/spring-boot-ecommerce/src/main/resources/application.properties
@@ -8,10 +8,11 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.data.rest.base-path=/api
 
 allowed.origins=http://localhost:4200
+#endpoints.cors.allowed-origins=*
 
 spring.data.rest.detection-strategy=ANNOTATED
 
 okta.oauth2.client-id=0oaq2dzub87H5IkN45d6
 okta.oauth2.client-secret=-YWe95fiJ0gCfYAjz1AICToy1zU4jkMq4oD5XVkB
-okta.oauth2.issuer=https://dev-20060040.okta.com
-#okta.oauth2.issuer=https://dev-20060040.okta.com/oauth2/default
+okta.oauth2.issuer=https://dev-20060040.okta.com/oauth2/default
+#okta.oauth.issuer=https://dev-20060040.okta.com
